# cyber-inference

./: .gitignore  AGENTS.md  DESIGN.md  Dockerfile.nvidia  README.md  plan.md  pyproject.toml  start.sh
.github/agents/: planner.agent.md
chat_templates/: default.jinja2  llama2.jinja2  mistral.jinja2  openchat.jinja2
src/cyber_inference/: cli.py  main.py
src/cyber_inference/api/: admin.py  v1.py  web.py  websocket.py
src/cyber_inference/core/: auth.py  config.py  database.py  logging.py
src/cyber_inference/models/: __init__.py  db_models.py  schemas.py
src/cyber_inference/services/: auto_loader.py  chat_template_manager.py  installation_manager.py  llama_installer.py  model_manager.py  process_manager.py  resource_monitor.py  sglang_manager.py  transformers_server.py  whisper_installer.py
src/cyber_inference/web/templates/: api_docs.html  base.html  dashboard.html  login.html  models.html  settings.html
tests/: test_transformers_server.py
