[project]
name = "cyber-inference"
version = "0.1.0"
description = "A web GUI management tool for running v1 compatible inference servers"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.12"
authors = [
    { name = "Matthew Rogers", email = "matt@matthewrogers.org" }
]
keywords = ["llama.cpp", "inference", "llm", "api", "openai", "edge", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    "psutil>=6.0.0",
    "huggingface-hub>=0.26.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "aiofiles>=24.1.0",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "sse-starlette>=2.1.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "kernels>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
cyber-inference = "cyber_inference.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true

# PyTorch CUDA index for Linux (Thor GPU server).
# On macOS/other platforms, torch is installed from PyPI (CPU-only).
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
